# EvoHarness

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  LOCAL_PROVIDERS.md  README.md  README.zh-CN.md  pyproject.toml  setup_local_provider.sh
.claude/agents/: command-smith.md  context-curator.md  docs-curator.md  evolution-auditor.md  explore.md  marketplace-curator.md  mcp-designer.md  mcp-scout.md  plugin-architect.md  provider-debugger.md  release-notary.md  test-matrix-keeper.md  validation-guardian.md  workflow-gardener.md
.claude/commands/: context-pressure.md  docs-refresh.md  ecosystem-audit.md  evolution-audit.md  feature-dev.md  handoff-brief.md  marketplace-audit.md  mcp-blueprint.md  plugin-blueprint.md  provider-diagnose.md  read-only-inspect.md  subagent-rollout.md  test-matrix.md  validation-gate.md  workflow-blueprint.md
.claude/skills/: command-authoring.md  docs-experience.md  harness-ecosystem.md  live-provider-debugging.md  long-context-retrieval.md  marketplace-curation.md  mcp-service-design.md  operator-handoff.md  plugin-authoring.md  python-edit.md  self-evolution-triage.md  session-driven-polish.md  (+4 more)
.evo-harness/: marketplace.json  mcp.json
docs/: ASSET_PLAN.md  architecture.md  feature-matrix.zh-CN.md  openharness-reference.md  project-positioning.zh-CN.md  roadmap.zh-CN.md
evo_harness/: __init__.py  __main__.py
examples/: README.md  settings-claude-code-cli.json  settings-codex.json  settings-ollama-llama3.json  settings-ollama-qwen2.json
scripts/: chat_session_workbench.py  live_workbench.py  self_evolution_workbench.py
(+156 files in other folders)
