[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evo-harness"
version = "0.1.0"
description = "A terminal-native agent harness for coding workflows and controlled self-evolution."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "EvoHarness Contributors" }
]
keywords = [
  "agent",
  "harness",
  "self-evolution",
  "terminal-ui",
  "mcp",
  "plugins",
  "claude-code",
  "openharness"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11"
]

[project.urls]
Homepage = "https://github.com/HITSZ-DS/EvoHarness"
Repository = "https://github.com/HITSZ-DS/EvoHarness"
Issues = "https://github.com/HITSZ-DS/EvoHarness/issues"

[project.scripts]
evoh = "evo_harness.cli:main"
eh = "evo_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
